# taiyi

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_base  Doxyfile  README.md  README_en.md
contrib/: config-for-ahnode.ini  config-for-broadcaster.ini  config-for-docker.ini  fullnode.config.ini  fullnode.opswhitelist.config.ini  healthcheck.conf.template  paas-sv-run.sh  startpaastaiyi.sh  sync-sv-run.sh  taiyi-sv-finish.sh  taiyi-sv-run.sh  taiyi.nginx.conf  taiyientrypoint.sh  taiyin.run
doc/: baiyujing_api.md  building.md  git-guidelines.md  kejixiuzhen_explain.md  protocol_operations.md  quickstart.md  roadmap.md  seednodes.txt  sgs_api.md  whitepaper_cn.md  whitepaper_en.md  yanhua_explain.md  yuzhou.md  yuzhou_explain.md  zhenqishouheng.md  zone_dynamics.md
doc/devs/: testing.md
libraries/: CMakeLists.txt
libraries/appbase/: CMakeLists.txt  application.cpp  application.hpp  plugin.hpp
libraries/appbase/examples/: main.cpp
libraries/chain/: CMakeLists.txt  account_object.hpp  actor_evaluator.cpp  actor_index.cpp  actor_objects.hpp  asset_index.cpp  block_log.cpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  contract_actor_handler.cpp  contract_asset_handle.cpp  contract_authority_handle.cpp  contract_context_handle.cpp  contract_evaluator.cpp  contract_handler.cpp  contract_handles.cpp  contract_handles.hpp  contract_index.cpp  contract_nfa_handle.cpp  contract_nfa_handler.cpp  contract_objects.cpp  contract_objects.hpp  contract_worker.cpp  contract_worker.hpp  contract_zone_handler.cpp  cultivation_objects.hpp  custom_operation_interpreter.hpp  database.cpp  database.hpp  database_actor.cpp  database_contract.cpp  database_cultivation.cpp  database_exceptions.hpp  database_nfa.cpp  database_zone.cpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.cpp  (+45 more)
libraries/chain/asset_objects/: account_balance_object.hpp  asset_objects.hpp  nfa_balance_object.hpp
libraries/chain/schema_types/: oid.hpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  advanced_benchmark_dumper.hpp  impacted.cpp  impacted.hpp  manabar.hpp  name_generator.cpp  name_generator.hpp  signal.hpp  uint256.hpp
libraries/chainbase/: CMakeLists.txt  allocators.hpp  chainbase.cpp  chainbase.hpp  object_id.hpp
libraries/chainbase/test/: CMakeLists.txt  test.cpp  test_objects.hpp  test_templates.hpp
libraries/danuo/: CMakeLists.txt  ansi.cpp  (+10 more)
libraries/lua/: CMakeLists.txt  README.md  cmake_install.cmake
libraries/lua/lib/: CMakeLists.txt  cmake_install.cmake  lapi.c  linit.c  lmem.c  lmem.h  lopcodes.c  lopcodes.h  lstate.c  lstate.h  ltable.c  lua.h  lvm.c
libraries/lua/lua/: CMakeLists.txt  cmake_install.cmake
libraries/lua/luac/: CMakeLists.txt  cmake_install.cmake
libraries/net/: CMakeLists.txt  config.hpp  core_messages.cpp  core_messages.hpp  exceptions.hpp  message.hpp  message_oriented_connection.cpp  message_oriented_connection.hpp  node.cpp  node.hpp  node_configuration.hpp  peer_connection.cpp  peer_connection.hpp  peer_database.cpp  peer_database.hpp  stcp_socket.cpp  stcp_socket.hpp
libraries/plugins/account_history/: CMakeLists.txt  account_history_objects.hpp  account_history_plugin.cpp  account_history_plugin.hpp
libraries/plugins/account_history_api/: CMakeLists.txt  account_history_api.cpp  account_history_api.hpp  account_history_api_plugin.cpp  account_history_api_plugin.hpp
libraries/plugins/baiyujing_api/: CMakeLists.txt  baiyujing_api.cpp  baiyujing_api.hpp  baiyujing_api_legacy_asset.cpp  baiyujing_api_legacy_asset.hpp  baiyujing_api_legacy_objects.cpp  baiyujing_api_legacy_objects.hpp  baiyujing_api_legacy_operations.cpp  baiyujing_api_legacy_operations.hpp  baiyujing_api_plugin.cpp  baiyujing_api_plugin.hpp  plugin.json
libraries/plugins/chain/: CMakeLists.txt  abstract_block_producer.hpp  chain_plugin.cpp  chain_plugin.hpp
libraries/plugins/json_rpc/: CMakeLists.txt  json_rpc_plugin.cpp  json_rpc_plugin.hpp  utility.hpp
libraries/plugins/siming/: CMakeLists.txt  block_producer.cpp  block_producer.hpp  plugin.json  siming_plugin.cpp  siming_plugin.hpp  siming_plugin_objects.hpp
libraries/protocol/: CMakeLists.txt  asset.cpp  asset.hpp  asset_symbol.hpp  authority.cpp  authority.hpp  base.hpp  block.cpp  block.hpp  block_header.hpp  config.hpp  exceptions.hpp  fixed_string.hpp  get_config.cpp  get_config.hpp  legacy_asset.hpp  lua_types.hpp  operation_util.hpp  operation_util_impl.hpp  operations.cpp  operations.hpp  protocol.hpp  schema_types.cpp  schema_types.hpp  sign_state.cpp  sign_state.hpp  taiyi_operations.cpp  taiyi_operations.hpp  taiyi_virtual_operations.hpp  transaction.cpp  transaction.hpp  transaction_util.hpp  types.cpp  types.hpp  types_fwd.hpp  validation.hpp  version.cpp  version.hpp
libraries/protocol/hardfork.d/: 0-preamble.hf
libraries/protocol/schema_types/: account_name_type.hpp  asset_symbol_type.hpp  fixed_string.hpp
libraries/schema/: CMakeLists.txt  abstract_schema.hpp  schema.cpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/schema_types/: flat_map.hpp  flat_set.hpp  optional.hpp  pair.hpp  static_variant.hpp  vector.hpp
libraries/tyme/: CMakeLists.txt  tyme.cpp  tyme.h  util.cpp  util.h
libraries/utilities/: CMakeLists.txt  benchmark_dumper.cpp  benchmark_dumper.hpp  database_configuration.cpp  database_configuration.hpp  git_revision.cpp.in  git_revision.hpp  key_conversion.cpp  key_conversion.hpp  logging_config.cpp  logging_config.hpp  padding_ostream.hpp  plugin_utilities.hpp  string_escape.cpp  string_escape.hpp  tempdir.cpp  tempdir.hpp  words.cpp  words.hpp
programs/: CMakeLists.txt
programs/danuo/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp
programs/taiyin/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  dump_taiyi_schema.cpp  get_dev_key.cpp  newplugin.py  object_size.py  rocksdb_advisor.sh  schema_test.cpp  serialize_set_properties.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_sqrt.cpp
tests/: .dockerignore  CMakeLists.txt  README.md
(+97 files in other folders)
